# rust-aws-lambda-dynamo

./: Cargo.toml  README.md
src/: main.rs
